fix(removeEventListener): Figured out that remove event was not working since it was an anonymous function so switched it to a named function. This also caused a problem of not being able to send the button that was called. The fix for this was using event as a parameter then using event.target that takes in which event call was used.

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,13 @@ body{
     height: 70px;
     font-size: 35px;
 }
+
+.box{
+    width: 292px;
+ 
+}
+
+#row0,#row1,#row2,#row3{
+    width: 292px;
+    margin: 0%;
+}
