feat(rotate): added the ability to rotate boggle board but issues are found

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,11 @@ body{
     width: 292px;
     margin: 0%;
 }
+
+.rotates, .rotatesBoggle{
+    -webkit-transition: 3s;
+    -moz-transition: 3s;
+    -ms-transition: 3s;
+    -o-transition: 3s;
+    transition: 3s;
+}
